# homeworkplus

./: .gitignore  Makefile  README.md  docker-compose.yml  poc.md  test.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/ai/: pipeline.py
backend/app/ai/agents/: math_agent.py  ocr_agent.py  progress_agent.py  rag_agent.py  recommendation_agent.py  translation_agent.py  tutor_agent.py  vision_agent.py  voice_agent.py
backend/app/api/v1/: ai_router.py  auth_router.py  dashboard_router.py  ws_router.py
backend/app/auth/: dependencies.py  security.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  achievement.py  answer.py  canvas_session.py  chat_history.py  document.py  embedding.py  image.py  leaderboard.py  lesson.py  notification.py  progress.py  question.py  reward.py  subject.py  subscription.py  user.py  voice_session.py
backend/app/schemas/: ai_schema.py  auth_schema.py  ws_schemas.py
backend/app/services/: whiteboard_service.py
backend/app/websocket/: manager.py  redis_pubsub.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/nav/: nav.component.ts
frontend/src/app/guards/: auth.guard.ts  guest.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/pages/auth/: auth.component.css  auth.component.html  auth.component.ts
frontend/src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/pages/landing/: landing.component.css  landing.component.html  landing.component.ts
frontend/src/app/services/: ai.service.ts  auth.service.ts
frontend/src/environments/: environment.prod.ts
(+20 files in other folders)
