[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "homeworkplus-backend"
version = "0.1.0"
description = "HomeworkPlus AI-powered homework assistant backend"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    # Pydantic
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Cache & Queue
    "redis>=5.0.8",
    "celery[redis]>=5.4.0",
    # AI / LLM
    "openai>=1.45.0",
    "anthropic>=0.34.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    # Vector DB
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # OCR & Vision
    "easyocr>=1.7.1",
    "paddlepaddle>=2.6.1",
    "paddleocr>=2.7.3",
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    # Math
    "sympy>=1.13.0",
    "latex2sympy2>=1.9.1",
    # Voice
    "gtts>=2.5.0",
    "pydub>=0.25.1",
    # HTTP
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    # Utils
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "rich>=13.8.0",
    "psycopg2>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
